--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <iframe src="https://madis.dk/filer/resume.pdf" frameborder="0"></iframe>
+  <iframe src="https://martindissing.github.io/filer/resume.pdf" frameborder="0"></iframe>
 </body>
 
 </html>
